--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ ui_*.h
 *.qmlc
 *.jsc
 Makefile*
+Makefile.*
 *build-*
 *.qm
 *.prl
@@ -54,8 +55,8 @@ compile_commands.json
 *_qmlcache.qrc
 
 WindCOM
-release
-debug
+release/
+debug/
 csv
 SerialWin.*
 colortableview.*
